[package]
name = "tree-sitter-htmldjango"
description = "A tree-sitter grammar for the Django template language"
version = "1.0.0"
authors = ["William Vandervalk"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "htmldjango"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/interdependence/tree-sitter-htmldjango"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
